<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".general.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="154dp"
        android:layout_height="171dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo_noir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenue sur 17train's"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/accroche"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="32dp"
        />

    <Button
        android:id="@+id/button_v_bas_du_corps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bas_du_corps"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="16dp"
        />

    <Button
        android:id="@+id/button_v_abdominaux"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/abdominaux"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/button_v_bas_du_corps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        />

    <Button
        android:id="@+id/button_v_haut_du_corps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/haut_du_corps"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_v_abdominaux" />

    <Button
        android:id="@+id/button_v_complet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/complet"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_v_haut_du_corps" />

</androidx.constraintlayout.widget.ConstraintLayout>

